opt mvn package