@@ -49,7 +49,7 @@ for file in ${DIRS[@]}
 		pid=`ps aux | grep com.rong360.main.Rong360CDC |grep "$file" |grep "$master"| grep -v grep | awk  '{print $2}'`
 		if [ -z $pid ];then
 			echo "starting "$master" cluster's instance:"$file
-			nohup $javaBin -Xms1024m -Xmx1024m -Xmn512m -Djava.awt.headless=true $JAVA_OPTS com.rong360.main.Rong360CDC $file $master>/dev/null 2>&1 &
+			nohup $javaBin -Xms1024m -Xmx1024m -Xmn512m -Djava.ext.dirs=lib -Djava.awt.headless=true $JAVA_OPTS com.rong360.main.Rong360CDC $file $master>/dev/null 2>&1 &
 			#check start status
 			sleep 5
 			pid=`ps aux | grep com.rong360.main.Rong360CDC |grep "$file" |grep "$master"| grep -v grep | awk  '{print $2}'`
